# idchallenge

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .envrc  Dockerfile  manage.py  pyproject.toml  schema.yml  start-app.sh
backend/api/: admin.py  apitests.http  converters.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: env-template  loader.py  mkenv.py
