[tool.poetry]
name = "idchallenge"
version = "0.1.0"
description = ""
authors = ["David Nugent <davidn@uniquode.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-settings-env = "^4.3.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
